--- a/DiscordBot/package.json
+++ b/DiscordBot/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "lurker-llama",
+  "name": "undiscord-exporter",
   "version": "0.1.0",
-  "description": "The smartest llama to ever exist — lurks in your discord channels to archive and answer questions about past conversations",
+  "description": "A Discord channel exporter service that produces HTML archives",
   "author": {
-    "name": "Pupcakes (Fluffy9)",
-    "email": "fluffy9@pupcakes.me",
-    "url": "pupcakes.me"
+    "name": "RaidGuild"
   },
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "@qdrant/js-client-rest": "^1.12.0",
-    "@qdrant/qdrant-js": "^1.12.0",
+    "@aws-sdk/client-s3": "^3.511.0",
+    "axios": "^1.6.7",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "llamaindex": "^0.8.22",
+    "express": "^4.18.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "tsup": "^8.3.5",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.0",
+    "tsup": "^8.0.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "dev": "tsx watch src/index.ts",
