--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "axios": "^1.6.7",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
