Add API_KEY env for basic auth

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ DO_SPACES_KEY=your_spaces_key
 DO_SPACES_SECRET=your_spaces_secret
 DO_SPACES_ENDPOINT=https://nyc3.digitaloceanspaces.com
 DO_SPACES_BUCKET=your_bucket_name
+
+# Basic Auth (recommended for production)
+API_KEY=your_secure_random_api_key
