--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,3 +18,4 @@ services:
       - DO_SPACES_SECRET=${DO_SPACES_SECRET}
       - DO_SPACES_ENDPOINT=${DO_SPACES_ENDPOINT}
       - DO_SPACES_BUCKET=${DO_SPACES_BUCKET}
+      - API_KEY=${API_KEY}
