Add VALHALLA_SITE env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+VALHALLA_SITE=your_valhalla_site
+
 # Discord Bot Configuration
 DISCORD_API_TOKEN=your_discord_bot_token
 DISCORD_CLIENT_ID=your_discord_client_id
